# Paygress

./: Cargo.toml  README.md
.github/workflows/: agent-sandbox-image.yml  ci.yml
dashboard/: app.js  features.js  index.html  style.css
docs/brainstorms/: 2026-04-26-paygress-12mo-vision-requirements.md
docs/plans/: 2026-04-26-001-feat-paygress-12mo-vision-plan.md  kvm-backend-and-isolation-tiers.md
docs/solutions/: README.md
docs/solutions/patterns/: critical-patterns.md
examples/: gen_key.rs  mint_test_token.rs  spawn_template_local.rs
images/agent-sandbox/: Dockerfile  server.py
images/ngit-runner/: Dockerfile  entrypoint.py
src/: blossom.rs  blossom_crypto.rs  cashu.rs  client.rs  compute.rs  discovery.rs  docker.rs  durable_workload.rs  kvm.rs  lib.rs  luks.rs  lxd.rs  main.rs  nostr.rs  pod_provisioning.rs  provider.rs  proxmox.rs  reputation.rs  sidecar_service.rs  stake.rs  templates.rs  volume_encryption.rs
src/cli/: api.rs  exec_client.rs  main.rs
src/cli/commands/: batch.rs  bootstrap.rs  deploy.rs  exec.rs  identity.rs  list.rs  mcp.rs  mod.rs  provider.rs  spawn.rs  status.rs  system.rs  topup.rs
src/interfaces/: http_l402.rs  mcp.rs  mod.rs
src/mcp/: http_client.rs  mod.rs  protocol.rs  server.rs
src/observatory/: aggregator.rs  mod.rs
templates/agent-sandbox/: docker-compose.yml
templates/bitcoin-node/: docker-compose.yml
templates/headless-browser/: docker-compose.yml
templates/inference-endpoint/: docker-compose.yml
templates/ngit-runner/: docker-compose.yml
templates/nostr-relay/: docker-compose.yml
templates/openclaw/: docker-compose.yml
tests/: access_details.rs  blossom.rs  cashu_redemption.rs  cli_deploy.rs  durable_workload.rs  lease_revocation.rs  nostr_schema.rs  replication_wire.rs  standby_promotion_announcement.rs  templates_spawn.rs  topup.rs  volume_encryption_wire.rs
